dark mode fix

--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -92,6 +92,21 @@ body {
     border-color: #2a2a2a;
 }
 
+.confirm-signout {
+    background-color: #121212;
+    border-color: #2a2a2a;
+}
+
+.mobile-search {
+    background-color: #121212;
+    border-bottom: 1px solid #2a2a2a;
+}
+
+.mobile-search__close img {
+    background: transparent;
+    filter: invert(1);
+}
+
 /*page*/
 
 .page-center {
